2008-12-01  Badlop  <badlop@process-one.net>

	* doc/guide.tex: New subsection Database Connection
	* doc/guide.html: Likewise

2008-12-01  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_frontend_socket.erl: Hibernate ejabberd_receiver and
	ejabberd_frontend_socket processes after timeout. Backported from
	Aleksey's patch (r1680)
	* src/ejabberd_frontend_socket.erl: Likewise

	* src/tls/tls_drv.c: Don't create a SSL context on every connection
	and disable SSLv2 on outgoing connections (EJAB-781). Backported from
	Aleksey's patch (r1675)

2008-11-26  Badlop  <badlop@process-one.net>

	* src/mod_irc/mod_irc.erl: Announce disco#info (thanks to Spike)
	* src/mod_muc/mod_muc.erl: Announce disco#info disco#items
	* src/mod_proxy65/mod_proxy65_service.erl: No announce disco#items
	* src/mod_pubsub/mod_pubsub.erl: Announce disco#info disco#items
	* src/mod_vcard.erl: Announce disco#info

	* src/gen_mod.erl: First store module options in ETS and Mnesia,
	then start the module. In case of failure, remove options from
	ETS. Until now the module was started before the options were
	stored in database, and some modules started incorrectly because
	they couldn't access the options from database; for instance
	mod_muc_room required this for reading max_users option.

	* src/mod_muc/mod_muc_room.erl: Include the value of max_users
	service option and the current max_users room option in the list
	of allowed room limit values.

2008-10-17  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_pep.erl: Fix get_node_affiliations resultset to
	owner (Thanks to Michal Schmidt)

2008-11-12  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve legibility of mod_irc example config

2008-11-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s_out.erl: exports the DNS resolution
	function.

2008-10-27  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl: Open ejabberd.log before parsing